Fix setting state for multiple checkboxes in polls
Avoids using componentDidMount and instead aims to emulate the example
set by `selectOption(string)`.

- Also removes CSS that prevented checkboxes from being deselected
( probably needs some cleaning up, the mouse pointer still looks incorrect)

--- a/res/css/views/messages/_MPollBody.pcss
+++ b/res/css/views/messages/_MPollBody.pcss
@@ -110,7 +110,7 @@ limitations under the License.
     }
 
     /* options not actionable in these states */
-    .mx_MPollBody_option_checked, .mx_MPollBody_option_ended {
+    .mx_MPollBody_option_ended {
         pointer-events: none;
     }
 
